--- a/css/jquery.gritter.css
+++ b/css/jquery.gritter.css
@@ -1,8 +1,8 @@
 #gritter-notice-wrapper {
 	position:fixed;
-	top:20px;
-	right:20px;
-	width:301px;
+	top:10px;
+	left:10px;
+	width:230px;
 	z-index:9999;
 }
 .gritter-item-wrapper {
