--- a/views/index.ejs
+++ b/views/index.ejs
@@ -399,6 +399,7 @@ prevVotingRegionHTML = '';
 
 now.setTextToBeTranslated = function(text, userSuggestingText) {
   $.gritter.removeAll()
+  $("#translationRegionNoSuggestion").show()
   if (text == $('#text_to_be_translated_suggestion').val()) {
     now.suggestNewTextToBeTranslated('', userid);
     $('#text_to_be_translated_suggestion').val('');
@@ -411,12 +412,13 @@ now.askForTextSuggestions = function() {
 if ($('.gritter-item').length == 0) {
 $.gritter.add({
 	// (string | mandatory) the heading of the notification
-	title: 'Select text for translation',
+	title: 'Select a sentence to translate',
 	// (string | mandatory) the text inside the notification
-	text: 'Paste some text from the article into "Suggest Text to be Translated"',
+	text: 'Paste a sentence from the article into "Suggest sentence from article to translate"',
 	sticky: true,
 });
 }
+$("#translationRegionNoSuggestion").hide(600)
 }
 
 now.quitUser = function(quserid, qgameid) {
@@ -837,17 +839,43 @@ Translation: <input type='text' name='add_translation' id='add_translation' styl
 
 <div id="topcontent">
 
-<div id="translateRegionContents">
+<div id="translateRegionContents" style="width: 100%">
 <form action="" onsubmit='return submitNewTextBeingTranslated()'>
-Suggest Text to be Translated: <input type='text' name='text_to_be_translated_suggestion' id='text_to_be_translated_suggestion' style='width: 70%;'></input>
+
+<table width="100%" cellspacing="0" cellpadding="0">
+<tr>
+<td style="white-space: nowrap">
+<label for="text_to_be_translated_suggestion">Suggest sentence from article to translate: </label>
+</td>
+<td width="100%">
+<input type='text' name='text_to_be_translated_suggestion' id='text_to_be_translated_suggestion' style="width: 100%;"></input>
+</td>
+</tr>
+</table>
+
 </form>
+
+<div id="translationRegionNoSuggestion" style="position: absolute; bottom: 5px; top: 40px; left: 0px; right: 0px; width: 100%">
+
+<div id="voting-region"></div>
 
 Text Being Translated: <div name='text_being_translated' id='text_being_translated'></div>
 
 <form action="" onsubmit='return submitNewTranslation()'>
-Translation: <input type='text' name='add_translation' id='add_translation' style='width: 70%;'></input>
+
+<table width="100%" cellspacing="0" cellpadding="0">
+<tr>
+<td style="white-space: nowrap">
+<label for="add_translation">Translation: </label>
+</td>
+<td width=100%>
+<input type='text' name='add_translation' id='add_translation' style="width: 100%;"></input>
+</td>
+</tr>
+</table>
+
 </form>
-<div id="voting-region" style='width: 70%'></div>
+</div>
 
 </div>
 
