--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
 <!--<style type="text/css" src='jquery-ui.css'></style>-->
 <!--<style type="text/css" src='ui.notify.css'></style>-->
 <link rel="stylesheet" type="text/css" href="css/jquery.gritter.css" />
+<link href='http://<%= servername %>:8080/static/css/bootstrap.css' rel='stylesheet' type='text/css'>
 <style type="text/css">
 
 /* Apply the element you want to drag/resize */
