--- a/views/lobby.ejs
+++ b/views/lobby.ejs
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>TransGame</title>
+    <script src=""></script>
+ <link href='http://<%= servername %>:8080/static/css/bootstrap.css' rel='stylesheet' type='text/css'>
   </head>
 <script src="jquery.min.js"></script>
 <script src="jquery.cookie.js"></script>
