--- a/views/index.ejs
+++ b/views/index.ejs
@@ -307,12 +307,12 @@ color: white;
 
 #chatregionframe{
 position: absolute;
-top: 40%; 
-left: 0;
+top: 0;
+right: 0;
 width: 250px; /*Width of frame div*/
-height: 60%;
+height: 40%;
 overflow: hidden; /*Disable scrollbars. Set to "scroll" to enable*/
-background: green;
+background: navy;
 color: white;
 }
 
@@ -320,7 +320,7 @@ color: white;
 position: fixed;
 top: 0; 
 left: 250px;
-right: 0;
+right: 250px;
 height: 40%;
 overflow: auto; /*Disable scrollbars. Set to "scroll" to enable*/
 background: navy;
@@ -331,7 +331,7 @@ color: white;
 position: fixed;
 top: 40%;
 right: 0;
-left: 250px; /*Set right value to WidthOfFrameDiv*/
+left: 0; /*Set right value to WidthOfFrameDiv*/
 bottom: 0;
 overflow: auto; 
 background: #fff;
@@ -759,7 +759,7 @@ alert(oRequest.responseText);
 
 
 //$('#userid_display').html(userid);
-$('#chatRegionContents').pad({'padId':'transgame-<%= gameidalphanumericsubs %>', 'host': 'http://transgame.csail.mit.edu:9001', 'height': '100%', 'width': '100%', 'userName': userid, 'showChat': true});
+$('#chatRegionContents').pad({'padId':'transgame-<%= gameidalphanumericsubs %>', 'host': 'http://transgame.csail.mit.edu:9001', 'height': '100%', 'width': '100%', 'userName': userid, 'showChat': false});
 //$('#chatRegionContents').pad({'padId':'transgame-<%= gameidalphanumericsubs %>', 'height': '100%', 'width': '100%', 'userName': userid, 'showChat': true});
 
 //$('#scoreBoardRegionContents').pad({'padId':'transgams-<%= gameidalphanumericsubs %>', 'height': '100%', 'userName': userid});
