--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
 <!--<style type="text/css" src='jquery-ui.css'></style>-->
 <!--<style type="text/css" src='ui.notify.css'></style>-->
 <link rel="stylesheet" type="text/css" href="css/jquery.gritter.css" />
-<link href='http://<%= servername %>:8080/static/css/bootstrap.css' rel='stylesheet' type='text/css'>
+<link href='css/bootstrap.css' rel='stylesheet' type='text/css'>
 <style type="text/css">
 
 /* Apply the element you want to drag/resize */
@@ -944,7 +944,7 @@ Translation: <input type='text' name='add_translation' id='add_translation' styl
 <table width="100%" cellspacing="0" cellpadding="0">
 <tr>
 <td style="white-space: nowrap">
-<label for="add_translation">Translation: &nbsp;</label>
+<div>Translation: &nbsp;</div>
 </td>
 <td width=100%>
 <input type='text' name='add_translation' id='add_translation' style="width: 100%; border: 0; margin: 0; padding: 0"></input>
