added introduction message, expandable

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -537,6 +537,60 @@ scrollChatToBottom()
 
 now.receiveSystemMessage = receiveSystemMessage
 
+function replaceMessage(extMsgId, exthtml) {
+$('#extMsg' + extMsgId).html(exthtml)
+}
+
+function replaceMessageEscaped(extMsgId, exthtmlescaped) {
+replaceMessage(extMsgId, unescape(exthtmlescaped))
+}
+
+function expandableHtml(shorthtml, exthtml) {
+return shorthtml + ' <a href="javascript:void(0)" style="background-color: #FFE96B" onclick="replaceMessageEscaped(' + extMsgId + ', \'' + escape(exthtml) + '\')">show more</a>'
+}
+
+function expandableHtml(args) {
+if (args.length == 0) return ''
+if (args.length == 1) return args[0]
+args.reverse()
+var prevExp = args[0]
+for (var i = 1; i < args.length; ++i) {
+prevExp = args[i] + ' <a href="javascript:void(0)" style="background-color: #FFE96B" onclick="replaceMessageEscaped(' + extMsgId + ', \'' + escape(prevExp) + '\')">show more</a>'
+}
+return prevExp
+}
+
+extMsgId = 0
+
+function receiveSystemMessageExtendedArray(args) {
+extMsgId += 1
+var newSpan = '<span id="extMsg' + extMsgId + '">' + expandableHtml(args) + '</span><br/>'
+$('#chatRegionContents').append(newSpan)
+scrollChatToBottom()
+}
+
+function receiveSystemMessageExtended() {
+var args = Array.prototype.slice.call(arguments)
+receiveSystemMessageExtendedArray(args)
+}
+
+function receiveSystemMessageExtendedText() {
+var args = Array.prototype.slice.call(arguments)
+args = $.map(args, function(x) { return htmlEscape(x) } )
+receiveSystemMessageExtendedArray(args)
+}
+
+function receiveSystemMessageAppending() {
+var args = Array.prototype.slice.call(arguments)
+if (args.length <= 1) return
+var nargs = []
+nargs[0] = args[0]
+for (var i = 1; i < args.length; ++i) {
+nargs[i] = nargs[i-1] + args[i]
+}
+receiveSystemMessageExtendedArray(nargs)
+}
+
 now.receiveChatMessage = function(text, userid) {
 var newSpan = '<b>' + userid + '</b>: ' + htmlEscape(text) + '<br/>'
 $('#chatRegionContents').append(newSpan)
@@ -604,6 +658,18 @@ $('#timeDisplay').text(data);
 
 }
 */
+
+now.welcomeUser = function(nuserid) {
+  if (nuserid == userid) {
+    receiveSystemMessageAppending("Welcome to TransGame, the competitve translation game!", "<br/>Highlight a sentence from the article to start a new round. In each round, you and other players submit translations and vote on the best one, until the timer reaches 0.", "<br/>Scoring: 1 point for voting for someone else's translation, 2 points for each other player who votes for your translation.", "<br/>You can chat with other players in this area by typing a message in the box below and pressing enter.")
+  } else {
+    receiveSystemMessage(nuserid + ' joined the game')
+  }
+}
+
+now.leavingUser = function(nuserid) {
+  receiveSystemMessage(nuserid + ' left the game')
+}
 
 now.sendFinalTranslation = function(textBeingTranslated, bestTranslation) {
   //var newText = getFrameHTML().replaceAll(textBeingTranslated, bestTranslation)
